k8s/sports-day-audit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sports-day-audit
  labels:
    app: sports-day-audit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sports-day-audit
  template:
    metadata:
      labels:
        app: sports-day-audit
        app.kubernetes.io/name: sports-day-audit
    spec:
      containers:
        - name: sports-day-zk
          image: confluentinc/cp-zookeeper:7.4.4
          ports:
            - name: zk-port
              containerPort: 2181
        - name: sports-day-kafka
          image: confluentinc/cp-kafka:7.4.4
          ports:
            - name: kafka-port
              containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: sports-day-audit
spec:
  selector:
    app.kubernetes.io/name: sports-day-audit
  ports:
    - name: kafka-port
      protocol: TCP
      port: 29092
      targetPort: kafka-port
