k8s/sports-day-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sports-day-db
  labels:
    app: sports-day-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sports-day-db
  template:
    metadata:
      labels:
        app: sports-day-db
        app.kubernetes.io/name: sports-day-db
    spec:
      containers:
        - name: sports-day-db
          image: postgres:latest
          ports:
            - name: postgres-port
              containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: sports-day-db
spec:
  selector:
    app.kubernetes.io/name: sports-day-db
  ports:
    - name: postgres-port
      protocol: TCP
      port: 5432
      targetPort: postgres-port
