k8s/example.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web1
  labels:
    app: web1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web1
  template:
    metadata:
      labels:
        app: web1
    spec:
      containers:
        - name: hello-app
          image: kicbase/echo-server:1.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web2
  labels:
    app: web2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web2
  template:
    metadata:
      labels:
        app: web2
    spec:
      containers:
        - name: hello-app
          image: kicbase/echo-server:1.0
---
apiVersion: v1
kind: Service
metadata:
  name: web1
spec:
  selector:
    app: web1
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web2
spec:
  selector:
    app: web2
  ports:
    - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joes-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: hello-world.example
      http:
        paths:
          - path: /joe
            pathType: Prefix
            backend:
              service:
                name: web1
                port:
                  number: 8080
          - path: /jenny
            pathType: Prefix
            backend:
              service:
                name: web2
                port:
                  number: 8080
