k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        app.kubernetes.io/name: keycloak
    spec:
      containers:
        - name: sports-day-auth
          image: quay.io/keycloak/keycloak:22.0
          ports:
            - name: http-web-svc
              containerPort: 8080
          command: ["start-dev", "--import-realm", "--https-port", "8085", "--http-enabled", "false", "--health-enabled", "true"]
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  selector:
    app.kubernetes.io/name: keycloak
  ports:
    - name: service-port
      protocol: TCP
      port: 8080
      targetPort: http-web-svc

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  tls:
    - hosts:
        - sports-day-auth.local
      secretName: sports-day-auth-tls
  rules:
    - host: sports-day-auth.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sports-day-auth
                port:
                  name: service-port
