k8s/sports-day-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sports-day-auth
  labels:
    app: sports-day-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sports-day-auth
  template:
    metadata:
      labels:
        app: sports-day-auth
        app.kubernetes.io/name: sports-day-auth
    spec:
      containers:
        - name: sports-day-auth
          image: quay.io/keycloak/keycloak:22.0
          ports:
            - name: http-web-svc
              containerPort: 8080
          command: ["sh", "-c", "/opt/keycloak/bin/kc.sh start-dev --http-port 8080 --health-enabled true"]
---
apiVersion: v1
kind: Service
metadata:
  name: sports-day-auth
spec:
  selector:
    app.kubernetes.io/name: sports-day-auth
  ports:
    - name: service-port
      protocol: TCP
      port: 8080
      targetPort: http-web-svc

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sports-day-auth
spec:
  tls:
    - hosts:
        - sports-day-auth.local
      secretName: sports-day-auth-tls
  rules:
    - host: sports-day-auth.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sports-day-auth
                port:
                  name: service-port
