k8s/sports-day-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sports-day-ui
  labels:
    app: sports-day-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sports-day-ui
  template:
    metadata:
      labels:
        app: sports-day-ui
        app.kubernetes.io/name: sports-day-ui
    spec:
      containers:
        - name: sports-day-ui
          image: sports-day-ui:latest
          imagePullPolicy: Never
          ports:
            - name: http-web-svc
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: sports-day-ui-service
spec:
  selector:
    app.kubernetes.io/name: sports-day-ui
  ports:
    - name: service-port
      protocol: TCP
      port: 80
      targetPort: http-web-svc

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sports-day-ui-ingress
spec:
  tls:
    - hosts:
        - sports-day-ui.local
      secretName: sports-day-ui-tls
  rules:
    - host: sports-day-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sports-day-ui-service
                port:
                  name: service-port
